AUTOMAKE_OPTIONS     = 1.4 foreign

MAINTAINERCLEANFILES = Makefile.in

INCLUDES = \
-I$(top_srcdir) \
-I$(top_srcdir)/src/lib \
-DPACKAGE_DATA_DIR=\"$(datadir)/$(PACKAGE)\" \
-DPACKAGE_BIN_DIR=\"$(bindir)\" \
@WHICHWAY_CFLAGS@

#lib_LTLIBRARIES = libwhichway.la

#include_HEADERS = Whichway.h

#libwhichway_la_SOURCES = 

#libwhichway_la_CFLAGS =
#libwhichway_la_LIBADD = 
#libwhichway_la_LDFLAGS = -no-undefined 
